--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Header */
 .header {
     text-align: center;
     background-color: #383838;
@@ -14,6 +15,8 @@ form {
     padding-right: 15px;
     height: 100%;
 }
+
+/* Search Bar */
 
 #search {
     background-color: rgb(248, 248, 248);
@@ -35,6 +38,7 @@ form {
     color: white;
 }
 
+/* Search History */
 .card {
     margin-left: 15px;
     margin-right: 15px;
@@ -49,7 +53,7 @@ form {
 .card-text {
     padding-top: 15px;
     padding-bottom: 15px;
-    padding-left: 15px;
+    padding-left: 20px;
     margin-bottom: 0px;
 }
 
@@ -57,6 +61,7 @@ hr {
     margin: 0px;
 }
 
+/* Weather */
 .col-sm-7 {
     padding: 0px;
     position: relative;
@@ -65,11 +70,11 @@ hr {
 
 .card-title {
     padding-top: 20px;
-    padding-left: 15px;
+    padding-left: 20px;
 }
 
 #today {
-    height: 297px;
+    height: 350px;
     width: 100%;
     margin-left: 0px !important;
 }
@@ -89,9 +94,10 @@ hr {
     padding: 0px;
 }
 
-.date {
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+.forecast-text {
+    padding-left: 10px;
+}
+
+#forecast-date {
+    padding-top: 20px;
 }
